Add pictures tab + fix buttons
Buttons usability, picture library

--- a/Music.html
+++ b/Music.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<Body>
+<body class="background">
 <!--Site Header-->
   <header class="site-header">
     <nav class="site-navigation">
@@ -13,6 +13,7 @@
         <li><a href="index.html" class="headLink">Home</a></li>
         <li><a href="Pictures.html" class="headLink">Pictures</a></li>
         <li><a href="Music.html" class="headLink">Music</a></li>
+        <li><a href="Chunder's Presskit.zip" download class="headLink">Presskit</a></li>
         <li><a href="Contact.html" class="headLink">Contact</a></li>
       </ul>
   </header>
