--- a/Pictures.html
+++ b/Pictures.html
@@ -47,7 +47,7 @@
   <div class="intro">
   <div id="image-gallery">
     <div id="image-thumbs"></div>
-    <img id="current-image" src="https://github.com/MauroDeBruyn/chunder/blob/Developer/Pictures/image1.jpg" alt="Image 1">
+    <img id="current-image" src="Pictures/image1.jpg" alt="Image 1">
     </div>
   </div>
 <script src="script.js"></script>
