Social media feed

--- a/Music.html
+++ b/Music.html
@@ -41,5 +41,10 @@
     </div>
 </div>
 
+    <div class="feed">
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+    <div class="elfsight-app-435c0012-a002-4484-a3d1-beb37f71320f"></div>
+    </div>
+
 </Body>
 </html>
